<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="8dp"
    tools:context=".jugar">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/usuarioJugar"
            android:text="@string/labelUsuario"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/labelPuntuacion"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:padding="5dp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/txtPuntuacionA"
                android:text="@string/labelDato"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:padding="5dp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:text="@string/indicacion_Juego"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/img_signo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/edtRespuesta"
            android:hint="@string/labelAdivinar"
            android:textSize="20sp"
            android:inputType="number"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/boton_redondo"
            android:elevation="5dp"
            android:onClick="clickAdivinar"
            android:text="@string/botonAdivinar"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>